// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom include 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`custom script 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`file associations only perMachine 1`] = `"Please set perMachine to true — file associations works on Windows only if installed for all users"`;

exports[`html license 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`installerHeaderIcon 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`menuCategory 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test Menu Category CustomName 1.1.0.exe",
      "safeArtifactName": "test-menu-category-setup-1.1.0.exe",
    },
  ],
}
`;

exports[`multi language license 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`one-click - differential package 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`one-click 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`one-click 2`] = `
Object {
  "owner": "actperepo",
  "package": "TestApp",
  "provider": "bintray",
}
`;

exports[`perMachine, no run after finish 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "githubArtifactName": "TestApp-Setup-1.1.0.exe",
        "path": "TestApp Setup 1.1.0.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "ia32",
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`perMachine, no run after finish 2`] = `
Object {
  "provider": "generic",
  "url": "https://develar.s3.amazonaws.com/test/win/ia32",
}
`;

exports[`perMachine, no run after finish 3`] = `
Object {
  "githubArtifactName": "TestApp-Setup-1.1.0.exe",
  "path": "TestApp Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`string menuCategory 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test Menu Category CustomName 1.1.0.exe",
      "safeArtifactName": "test-menu-category-setup-1.1.0.exe",
    },
  ],
}
`;

exports[`web installer (default github) 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "githubArtifactName": "TestApp-WebSetup-1.1.0.exe",
        "packages": Object {
          "ia32": Object {
            "file": "TestApp-1.1.0-ia32.nsis.7z",
          },
          "x64": Object {
            "file": "TestApp-1.1.0-x64.nsis.7z",
          },
        },
        "path": "Test App ßW Web Setup 1.1.0.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "packageFiles": Object {
        "ia32": Object {
          "file": "TestApp-1.1.0-ia32.nsis.7z",
        },
        "x64": Object {
          "file": "TestApp-1.1.0-x64.nsis.7z",
        },
      },
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
    },
    Object {
      "arch": "ia32",
      "file": "TestApp-1.1.0-ia32.nsis.7z",
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "githubArtifactName": "TestApp-WebSetup-1.1.0.exe",
        "packages": Object {
          "x64": Object {
            "file": "TestApp-1.1.0-x64.nsis.zip",
          },
        },
        "path": "Test App ßW Web Setup 1.1.0.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "packageFiles": Object {
        "x64": Object {
          "file": "TestApp-1.1.0-x64.nsis.zip",
        },
      },
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.zip",
    },
  ],
}
`;
